syntax = "proto3";

package kuma.plugins.ca;

import "api/system/v1alpha1/datasource.proto";

option go_package = "github.com/kumahq/kuma/plugins/ca/config";

// ProvidedCertificateAuthorityConfig defines configuration for Provided CA
// plugin
message ProvidedCertificateAuthorityConfig {
  // Data source for the certificate of CA
  kuma.system.v1alpha1.DataSource cert = 1;
  // Data source for the key of CA
  kuma.system.v1alpha1.DataSource key = 2;
}
